[tool.poetry]
name = "machine-learning-specialization-coursera"
version = "0.1.0"
description = ""
authors = ["bunsy23 <bunsy2014@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tensorflow = "^2.16.1"
matplotlib = "^3.9.0"
ipywidgets = "^8.1.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
